--- a/index.html
+++ b/index.html
@@ -4,44 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mathpunch OS</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to Mathpunch OS</h1>
-  <form id="loginForm">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required><br><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required><br><br>
-    <button type="submit">Login</button>
-  </form>
-  <p id="message" style="color: red;"></p>
-  <script>
-    // Handle form submission
-    document.getElementById("loginForm").addEventListener("submit", async function (event) {
-      event.preventDefault();
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-
-      // Send credentials to the backend
-      const response = await fetch("https://your-backend-url.com/login", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({ username, password }),
-      });
-
-      if (response.ok) {
-        const data = await response.json();
-        if (data.success) {
-          window.location.href = "https://www.google.com";
-        } else {
-          document.getElementById("message").textContent = "Invalid username or password!";
-        }
-      } else {
-        document.getElementById("message").textContent = "Error connecting to the backend.";
-      }
-    });
-  </script>
+  <div id="desktop">
+    <div id="taskbar">
+      <button id="startMenu">Start</button>
+    </div>
+    <div id="window" class="hidden">
+      <div class="window-header">
+        <span>Terminal</span>
+        <button id="closeWindow">X</button>
+      </div>
+      <div class="window-body">
+        <textarea id="terminal"></textarea>
+      </div>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
